[package]
name = "tinystl"
description = "A small library to read and write STL mesh files, inspired by MicroSTL."
version = "0.0.2"
authors = ["Lukas Hermann"]
repository = "https://github.com/lsh/tinystl"
readme = "README.md"
keywords = ["stl", "mesh"]
edition = "2021"
license = "MIT"

[features]
bytemuck = ["dep:bytemuck"]
serde = ["dep:serde"]

[dependencies]
bytemuck = { version = "1", optional = true }
serde = { version = "1", optional = true, features = ["derive"] }

[dev-dependencies]
tempfile = "3.3.0"
